<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_background"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_side"
        android:paddingRight="@dimen/padding_side"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="5"
            android:orientation="vertical"
            >


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:textColorHint="@color/text_color_register_hint"
                app:errorTextAppearance="@style/MyErrorText">

                <EditText
                    android:id="@+id/frag_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/loginTextSize" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_ten"
                android:textColorHint="@color/text_color_register_hint"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/frag_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_lock"
                    android:drawableRight="@drawable/ic_lock"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/loginTextSize" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/frag_login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:clickable="true"
                android:layout_marginTop="@dimen/margin_twnety"
                android:text="@string/forgot_password"
                android:textColor="@color/selector_forgot_pswd_txtview"
                android:textSize="@dimen/prod_name_text_size" />

            <Button
                android:id="@+id/frag_login_btn"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_thirty"
                android:layout_marginBottom="@dimen/margin_thirty"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/margin_fifty"
                android:paddingRight="@dimen/margin_fifty"
                android:background="@drawable/ripple_button_effect"
                android:imeOptions="actionDone"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/loginTextSize"
                style="?android:attr/borderlessButtonStyle"/>

          </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight=".8">

            <TextView
                android:id="@+id/txtTerms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginTop="@dimen/margin_twnety"
                android:layout_gravity="bottom"
                android:gravity="right"
                android:text="@string/txt_terms"
                android:textColor="@color/selector_forgot_pswd_txtview"
                android:textSize="@dimen/loginTextSize"
                />


            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="@dimen/margin_twnety"
                android:background="@color/text_color_grey_light" />

            <TextView
                android:id="@+id/txtPrivacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginTop="@dimen/margin_twnety"
                android:layout_gravity="bottom"
                android:gravity="left"
                android:text="@string/txt_privacy"
                android:textColor="@color/selector_forgot_pswd_txtview"
                android:textSize="@dimen/loginTextSize"
                />


        </LinearLayout>



    </LinearLayout>


</ScrollView>


